<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="35dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_history"
                android:visibility="gone"
                android:text="@string/see_history"/>

            <EditText
                android:id="@+id/edit_plate"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_login"
                android:hint="@string/enter_plate"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#BBBBBB"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:weightSum="5"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:id="@+id/edit_date"
                    android:layout_height="45dp"
                    android:background="@drawable/border_login"
                    android:hint="@string/enter_date"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLines="1"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#BBBBBB"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/btn_date"
                    android:src="@drawable/ic_today_black_24dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:weightSum="5"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/edit_hour"
                    android:background="@drawable/border_login"
                    android:hint="@string/enter_time"
                    android:imeOptions="actionNext"
                    android:inputType="time"
                    android:enabled="false"
                    android:maxLines="1"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#BBBBBB"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:id="@+id/btn_hour"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:id="@+id/check_disc"
                    android:layout_height="wrap_content"
                    android:text="@string/disability"/>


                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:id="@+id/check_third_age"
                    android:text="@string/senior_citizens"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_see"
                android:text="@string/see_contravention"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:id="@+id/text_result"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:id="@+id/linear_next"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="#DC666666"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/next_contraventions"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/text_placa"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/linear_next_adapter"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>